# puff3d

./: Cargo.toml  README.md
src/: main.rs  mesh_converters.rs
src/brick_wall/: brick_wall.mtl
src/config/: input.rs  mesh_example.rs  mod.rs  vulkan.rs
src/cottage_house/: cottage.mtl
src/frame/: ambient_lighting_system.rs  directional_lighting_system.rs  mod.rs  object_3d_shadow_pass.rs  point_lighting_phong_system.rs  point_lighting_system.rs  scene_renderer.rs  scene_shadow_pass.rs  shadow_map_renderer.rs  system.rs
src/frame/deferred_pass/: deferred_map_renderer.rs  mod.rs  object_3d_deferred_pass.rs
src/frame/lighting_pass/: lighting_pass.rs  lighting_renderer.rs  mod.rs
src/frame/shadow_pass/: mod.rs  object_3d_shadow_pass.rs  shadow_map_renderer.rs
src/object_3d_loader/: dicom_loader.rs  material_loader.rs  mesh_converters.rs  mod.rs
src/scene_pkg/: camera.rs  directional_ligh.rs  directional_light.rs  material.rs  mesh.rs  mod.rs  model.rs  object3d.rs  scene.rs  transform.rs  volume.rs
src/series-00000/: image-0000.dcm  image-0001.dcm  image-00010.dcm  image-00011.dcm  image-00012.dcm  image-00013.dcm  image-00014.dcm  image-00015.dcm  image-00016.dcm  image-00017.dcm  image-00018.dcm  image-00019.dcm  image-0002.dcm  image-00020.dcm  image-00021.dcm  image-00022.dcm  image-00023.dcm  image-00024.dcm  image-0003.dcm  image-0004.dcm  image-0005.dcm  image-0006.dcm  image-0007.dcm  image-0008.dcm  image-0009.dcm
src/system/: draw_system.rs  mesh.rs  mesh_draw_system.rs  mod.rs  object_3d_draw_system.rs  scene_draw_system.rs
(+3 files in other folders)
