[package]
name = "puff3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.31.0"
vulkano-shaders = "0.31.0"
image = "0.24.0"
winit = "0.27"
vulkano-win = "0.31.0"
rand = "0.8.5"
bytemuck = "1.8.0"
cgmath = "0.18"
regex = "1"
png = "0.17"

